<resources>

    <string name="app_name">Subsurface</string>
    <string name="default_url">http://api.hohndel.org</string>
    <string name="default_duration">30</string>
    <string name="default_distance">10</string>
    <string name="default_dive_name">Auto-created dive</string>
    <string name="default_map_dive_name">Map Picked dive</string>
    <string name="default_gpximport_divename">GPX Imported Dive</string>

    <string name="home_action_mode_title">%s selected</string>
    <string name="home_no_account">You have not yet configured your Subsurface account</string>
    <string name="home_dive_list_empty">No dives</string>

    <string name="search_date_from">From</string>
    <string name="search_date_to">To</string>

    <string name="details_coordinates">%1$f <b>%3$s</b> %2$f <b>%4$s</b></string>
    <string name="cardinal_north">N</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_west">W</string>
    <string name="details_action_mode_title">Edit dive</string>

    <string name="dialog_location_name">Location name</string>
    <string name="dialog_wait">Please wait&#8230;</string>
    <string name="dialog_wait_send">Sending locations&#8230;</string>

    <string name="menu_new">New dive</string>
    <string name="menu_dives">Dives</string>
    <string name="menu_map">Map</string>
    <string name="menu_send">Send</string>
    <string name="menu_locate">Locate current position</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_send_all">Send all locations</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logoff">Disconnect</string>
    <string name="menu_search">Search</string>
    <string name="menu_save">Save</string>
    <string name="menu_time">Time</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_start_background_service">Start service</string>
    <string name="menu_stop_background_service">Stop service</string>
    <string name="menu_new_current">Current position</string>
    <string name="menu_new_map">Use map</string>
    <string name="menu_new_gpx">Import local GPX file</string>
    <string name="menu_accept">Accept</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_unselect_all">Unselect all</string>
        
    <string name="notification_background_service_on">Background location service active</string>

    <string name="confirm_disconnect">Do you really want to disconnect ?</string>
    <string name="confirm_delete_dives">Do you really want to delete these dives ?</string>
    <string name="confirm_delete_dive">Do you really want to delete this dive ?</string>
    <string name="confirm_enable_gps">Your GPS is disabled. Do you want to activate it?</string>
    <string name="confirm_enable_gps_title">Enable GPS</string>

    <string name="confirmation_location_picked">Location %s has been added</string>
    <string name="confirmation_location_sent">Location "%s" has been sent</string>
    <string name="confirmation_locations_sent">%1$d/%2$d locations have been sent</string>
    <string name="confirmation_dive_picked_sent">Dive %s has been added and sent</string>

    <string name="error_location">Could not receive location</string>
    <string name="error_send">Could not send location</string>
    <string name="error_no_settings">Please set your parameters before sending data</string>
    <string name="error_not_yet_implemented">Not yet implemented</string>
    <string name="error_no_associated_dive">Could not find associated dive</string>
    <string name="error_background_service_unstoppable">Could not stop background service</string>
    
    <string name="error_bad_http_code">Server returned a bad HTTP code</string>
    <string name="error_login_invalid">Server did not recognize your login</string>
    <string name="error_email_already_exists">Your email is already registered on the server</string>
    <string name="error_email_unknown">This email is unknown by the server</string>
    <string name="error_email_id_not_matching">Your email and ID do not match</string>
    <string name="error_invalid_request">Server did not understand the request</string>
    <string name="error_network">No network. Please retry later</string>
    <string name="error_parse_error">Could not understand server response</string>
    <string name="error_no_image_location">Could not retrieve image location</string>
    <string name="error_open_image">Could not open image</string>
    <string name="error_delete_dives">Could not delete dives</string>
    <string name="error_delete_dive">Could not delete dive</string>

    <string name="error_sd_unavailable">SD Card Error</string>
    <string name="error_no_dive_found">No dive info received</string>
    <string name="error_gpx_no_file_found">No GPX file found in the SD card</string>
    <string name="error_gpx_no_dive_found">No Divepoints found in the GPX file</string>

    <string name="account_link_create">Create a new account</string>
    <string name="account_link_retrieve">Retrieve an account</string>
    <string name="account_link_existing">Use an existing account</string>

    <string name="success_user_creation">Your account has been successfully created. Check your emails to validate it</string>
    <string name="success_user_retrieval">An email containing your ID has been sent. Enter it in Settings menu</string>
    <string name="success_user_existing">Subsurface has been successfully configured</string>
    <string name="success_refresh">Dives have been updated</string>

    <string name="error_title">Error</string>
    <string name="error_fatal">Subsurface has encountered a fatal error and must exit.</string>
    <string name="error_generic">An error has occurred. Please check your settings and retry later</string>
    
    <!-- Warning : MM = month, mm = minutes -->
    <string name="date_format_full">MM/dd/yyyy HH:mm</string>
    <string name="date_format_short">MM/dd/yyyy</string>
    <string name="date_format_time">HH:mm</string>

    <string name="hint_email">Email address</string>
    <string name="hint_id">ID</string>
    <string name="hint_dive_name">Dive name</string>
    <string name="hint_dive_offset">Minutes past after dive</string>

    <string name="settings_category_ws">Server and account</string>
    <string name="settings_destination_url">Web-service URL</string>
    <string name="settings_destination_url_summary">URL for server synchronization</string>
    <string name="settings_user_id">User ID</string>
    <string name="settings_user_id_summary">ID registered on server</string>

    <string name="settings_category_sync">Synchronization</string>
    <string name="settings_sync_on_startup">Synchronize on startup</string>
    <string name="settings_sync_on_startup_summary">Synchronize with server on application startup</string>
    <string name="settings_sync_auto_send">Upload new dives</string>
    <string name="settings_sync_auto_send_summary">When a dive is added, send it automatically</string>

    <string name="settings_category_background_service">Background service</string>
    <string name="settings_background_duration">Min duration (minutes)</string>
    <string name="settings_background_duration_summary">Minimum duration between two positions fixes</string>
    <string name="settings_background_distance">Min distance (meters)</string>
    <string name="settings_background_distance_summary">Minimum distance between two positions fixes</string>
    <string name="settings_background_name">Name template</string>
    <string name="settings_background_name_summary">Auto-created dive names</string>

    <string name="settings_category_other">Other</string>
    <string name="settings_other_mailing_list">Mailing list</string>
    <string name="settings_other_mailing_list_summary">Send an email to all members</string>
    <string name="settings_other_website">Subsurface website</string>
    <string name="settings_other_website_summary">Open project website</string>
    <string name="settings_other_version">Version</string>
    <string name="settings_other_version_summary">Current version: %s</string>

    <string name="gpx_dummy_name">Name of GPX file</string>
    <string name="gpx_dummy_path">Path to GPX file : qwertyuiopasdfghjklzxcvbnm</string>
    <string name="gpx_dummy_date">yyyy-MMM-dd KK:mm:ss a</string>
    <string name="gpx_dialog_search">Searching for GPX files</string>

    <string name="title_picklocationgpx">Select Locations</string>
    <string name="title_pickgpx">Select GPX file</string>
    <string name="title_picklocationmap">Click to select</string>
    <string name="title_map_marker">Dive informations</string>
</resources>
