<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_menu_new"
        android:showAsAction="always"
        android:title="@string/menu_new">
        <menu>
            <item
                android:id="@+id/menu_new_current"
                android:title="@string/menu_new_current"/>
            <item
                android:id="@+id/menu_new_map"
                android:title="@string/menu_new_map"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_start_background_service"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:title="@string/menu_start_background_service"/>
    <item
        android:id="@+id/menu_send_all"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/menu_send_all"/>
    <item
        android:id="@+id/menu_logoff"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/menu_logoff"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>