<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:showAsAction="always"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_menu_send_now"
        android:showAsAction="always"
        android:title="@string/menu_send"/>
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_menu_map"
        android:showAsAction="ifRoom"
        android:title="@string/menu_map"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_discard"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>