<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dateFilterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/hackButton"
            android:layout_width="2dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/hackButton"
            android:layout_alignParentLeft="true"
            android:text="@string/search_date_from"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/fromText"
            android:text="@string/date_format_short" />

        <Button
            android:id="@+id/buttonFromHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/buttonFromDate"
            android:text="@string/date_format_time" />

        <Button
            android:id="@+id/buttonToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonFromDate"
            android:layout_below="@+id/buttonFromDate"
            android:text="@string/date_format_short" />

        <Button
            android:id="@+id/buttonToHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonFromHour"
            android:layout_below="@+id/buttonFromDate"
            android:text="@string/date_format_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/buttonToDate"
            android:layout_alignLeft="@id/fromText"
            android:text="@string/search_date_to"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:choiceMode="none"
        android:paddingRight="@dimen/default_margin"
        android:textFilterEnabled="true" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/home_dive_list_empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>